// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correcly 1`] = `
<div
  className="code-search"
  id="code-search"
>
  <SearchBox
    minLength={3}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="code.search_placeholder"
    value=""
  />
  <DeferredSpinner
    className="spacer-left"
    loading={false}
  />
</div>
`;

exports[`should render correcly: new code toggle for portfolio 1`] = `
<div
  className="code-search"
  id="code-search"
>
  <ButtonToggle
    className="big-spacer-right"
    disabled={false}
    name="portfolio-scope"
    onCheck={[MockFunction]}
    options={
      Array [
        Object {
          "disabled": false,
          "label": "projects.view.new_code",
          "value": true,
        },
        Object {
          "disabled": false,
          "label": "projects.view.overall_code",
          "value": false,
        },
      ]
    }
    value={false}
  />
  <SearchBox
    minLength={3}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="code.search_placeholder.portfolio"
    value=""
  />
  <DeferredSpinner
    className="spacer-left"
    loading={false}
  />
</div>
`;

exports[`should render correcly: new code toggle for portfolio disabled 1`] = `
<div
  className="code-search"
  id="code-search"
>
  <ButtonToggle
    className="big-spacer-right"
    disabled={false}
    name="portfolio-scope"
    onCheck={[MockFunction]}
    options={
      Array [
        Object {
          "disabled": true,
          "label": "projects.view.new_code",
          "value": true,
        },
        Object {
          "disabled": true,
          "label": "projects.view.overall_code",
          "value": false,
        },
      ]
    }
    value={false}
  />
  <SearchBox
    minLength={3}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="code.search_placeholder.portfolio"
    value="bar"
  />
  <DeferredSpinner
    className="spacer-left"
    loading={true}
  />
</div>
`;
